--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cloudinary==1.36.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2.24
+django-phonenumber-field==8.1.0
 gunicorn==20.1.0
 idna==3.10
 psycopg2==2.9.10
