--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==4.2.24
 django-phonenumber-field==8.1.0
 gunicorn==20.1.0
 idna==3.10
+phonenumbers==9.0.15
 psycopg2==2.9.10
 requests==2.32.5
 setuptools==80.9.0
