--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.9.1
 certifi==2025.8.3
 charset-normalizer==3.4.3
 cloudinary==1.36.0
+crispy-bootstrap5==0.7
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2.24
+django-crispy-forms==2.0
 django-phonenumber-field==8.1.0
 gunicorn==20.1.0
 idna==3.10
